# sm-ur3-control

./: .gitignore  CLAUDE.md  README.md  requirements.txt
config/: teleop_config.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
ros2_ws/src/sm_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/sm_teleop/config/: servo_params.yaml
ros2_ws/src/sm_teleop/launch/: ur3_teleop.launch.py
ros2_ws/src/sm_teleop/sm_teleop/: twist_relay_node.py
scripts/: start_direct.sh  start_ros.sh
src/: spacemouse_reader.py  teleop_direct.py  teleop_ros_bridge.py  ur3_controller.py
