<?xml version="1.0"?>
<package format="3">
  <name>sm_teleop</name>
  <version>0.1.0</version>
  <description>SpaceMouse teleop relay for UR3 via MoveIt Servo</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
